--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="2"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:keepScreenOn="true">
 
     <com.arecmetafora.getmethere.Map
