--- a/lib/src/main/res/values/attrs.xml
+++ b/lib/src/main/res/values/attrs.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <attr name="locationIcon" format="reference" />
+
     <declare-styleable name="Compass">
         <attr name="arcWidth" format="dimension" />
         <attr name="arcColor" format="color" />
         <attr name="textSize" format="dimension" />
         <attr name="textColor" format="color" />
-        <attr name="locationIcon" format="reference" />
+        <attr name="locationIcon" />
         <attr name="pointer" format="reference" />
+    </declare-styleable>
+    <declare-styleable name="Map">
+        <attr name="locationIcon" />
     </declare-styleable>
 </resources>
