Dialog to select Map description + Bug fix: Rotation and state on downloader dialog + Improved easter egg

--- a/app/src/main/res/layout/activity_offline_locations.xml
+++ b/app/src/main/res/layout/activity_offline_locations.xml
@@ -23,9 +23,10 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/offline_locations_list"
-        android:layout_marginTop="?android:attr/actionBarSize"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="?android:attr/actionBarSize"
+        android:background="@color/cardview_list_background"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/offline_locations_add"
