--- a/app/src/main/res/layout/activity_location_downloader.xml
+++ b/app/src/main/res/layout/activity_location_downloader.xml
@@ -24,6 +24,7 @@
             android:id="@+id/location_downloader_search"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:maxLines="1"
             android:hint="@string/location_to_search" />
     </android.support.design.widget.TextInputLayout>
 
@@ -39,32 +40,41 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/location_downloader_current_location"
+    <ScrollView
+        android:id="@+id/location_downloader_confirm_layout"
         android:layout_width="0dp"
-        android:layout_height="250dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:scaleType="centerCrop"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/location_downloader_search_layout"/>
+        app:layout_constraintTop_toBottomOf="@+id/location_downloader_search_layout">
 
-    <Button
-        android:id="@+id/location_downloader_confirm"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:onClick="onConfirmSaveLocation"
-        android:text="@string/confirm"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/location_downloader_current_location" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/location_downloader_current_location"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:scaleType="centerCrop" />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:onClick="onConfirmSaveLocation"
+                android:text="@string/confirm"
+                app:layout_constraintTop_toBottomOf="@+id/location_downloader_current_location" />
+        </LinearLayout>
+    </ScrollView>
 
     <FrameLayout
         android:id="@+id/location_downloader_loading_frame"
