--- a/app/src/main/res/layout/offline_location_item.xml
+++ b/app/src/main/res/layout/offline_location_item.xml
@@ -32,6 +32,7 @@
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            style="@style/TextAppearance.Design.Tab"
             card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toStartOf="parent" />
