--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#003580</color>
     <color name="colorPrimaryDark">#003580</color>
     <color name="colorAccent">#009EE6</color>
+    <color name="cardview_list_background">#F2F2F2</color>
 </resources>
