Augmented Reality View + PrivacyPolicy

--- a/app/src/main/res/layout/activity_getmethere.xml
+++ b/app/src/main/res/layout/activity_getmethere.xml
@@ -12,15 +12,13 @@
     <com.arecmetafora.getmethere.Map
         android:id="@+id/map"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-    />
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
     <com.arecmetafora.getmethere.Compass
         android:id="@+id/compass"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        />
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
 </LinearLayout>
